# spirit

./: .clang-format  .cspell.json  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  library.properties  spirit.h
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/script/: install-arduino-cli.sh  install-gcc-arm-none-eabi.sh  install-mbed-cli-1.sh  install-mbed-cli-2.sh
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: actionlint.yml  build.yml  cmake-test.yml  codeql.yml  deploy-static.yml  devcontainer.yml  docker-image.yml  doxygen.yml  editorconfig-checker.yml  flawfinder.yml  spell.yml  style-check.yml
.github/workflows/build-arduino-cli/: build-arduino-cli.ino
.github/workflows/build-mbed/: main.cpp
.github/workflows/build-mbed-tools/: CMakeLists.txt
doxygen/: Doxyfile  Doxyfile4GeneralUsers  index.md
include/: A3921.h  CANMessage.h  DataConverter.h  Error.h  FakeUdpConverter.h  Id.h  InterfaceDigitalOut.h  InterfaceMotor.h  InterfacePwmOut.h  MdLed.h  Motor.h  MotorDataConverter.h  MotorProtocolCoder.h  PwmDataConverter.h  SpeedDataConverter.h  adjust_duty_cycle.h  bfloat16.h  bit.h  interfaceDigitalOut.h  interfaceLeds.h  interfaceMotor.h  interfacePwmOut.h  mutex.h  version.base.txt  version.h
platform/mbed/include/: DigitalOut.h  MyDigitalOut.h  MyPwmOut.h  PwmOut.h
platform/mbed/source/: DigitalOut.cpp  MyDigitalOut.cpp  MyPwmOut.cpp  PwmOut.cpp
scripts/: generate_version_header.py  modify_commit_info.py
source/: A3921.cpp  CANMessage.cpp  Error.cpp  FakeUdpConverter.cpp  Id.cpp  MdLed.cpp  Motor.cpp  MotorDataConverter.cpp  MotorProtocolCoder.cpp  PwmDataConverter.cpp  SpeedDataConverter.cpp  bfloat16.cpp  bit.cpp  mutex.cpp
src/: spirit.h
src/spirit/include/: A3921.h  Error.h  FakeUdpConverter.h  Id.h  InterfaceDigitalOut.h  InterfaceInterruptIn.h  InterfacePwmOut.h  MdLed.h  Motor.h  PwmDataConverter.h  SpeedController.h  SpeedDataConverter.h  adjust_duty_cycle.h  bfloat16.h  bit.h  mutex.h  version.h
src/spirit/platform/arduino/include/: DigitalOut.h  PwmOut.h
src/spirit/platform/arduino/src/: DigitalOut.cpp  PwmOut.cpp
src/spirit/platform/mbed/include/: DigitalOut.h  InterruptIn.h  PwmOut.h
src/spirit/platform/mbed/source/: DigitalOut.cpp  InterruptIn.cpp  PwmOut.cpp
src/spirit/src/: A3921.cpp  CANMessage.cpp  Error.cpp  FakeUdpConverter.cpp  Id.cpp  MdLed.cpp  Motor.cpp  MotorDataConverter.cpp  PwmDataConverter.cpp  SpeedController.cpp  SpeedDataConverter.cpp  bfloat16.cpp  bit.cpp  mutex.cpp
tests/: CMakeLists.txt  integration_test.cpp  stubs.h  test_A3921.cpp  test_CANMessage.cpp  test_Error.cpp  test_FakeUdpConverter.cpp  test_Id.cpp  test_MdLed.cpp  test_Motor.cpp  test_MotorDataConverter.cpp  test_MotorProtocolCoder.cpp  test_PwmDataConverter.cpp  test_SpeedController.cpp  test_SpeedDataConverter.cpp  test_adjust_duty_cycle.cpp  test_bfloat16.cpp  test_bit.cpp
